--- a/public/project/phdproject/index.html
+++ b/public/project/phdproject/index.html
@@ -61,8 +61,8 @@
   
 
   
-  <link rel="alternate" href="/index.xml" type="application/rss+xml" title="Manuel F. Rocha Sepúlveda">
-  <link rel="feed" href="/index.xml" type="application/rss+xml" title="Manuel F. Rocha Sepúlveda">
+  <link rel="alternate" href="/index.xml" type="application/rss+xml" title="Manuel Rocha">
+  <link rel="feed" href="/index.xml" type="application/rss+xml" title="Manuel Rocha">
   
 
   <link rel="manifest" href="/site.webmanifest">
@@ -76,9 +76,9 @@
   <meta property="twitter:site" content="@manufore">
   <meta property="twitter:creator" content="@manufore">
   
-  <meta property="og:site_name" content="Manuel F. Rocha Sepúlveda">
+  <meta property="og:site_name" content="Manuel Rocha">
   <meta property="og:url" content="/project/phdproject/">
-  <meta property="og:title" content="Genetic and environmental controls of traits affecting profitability of pulp &amp; solid-wood production from plantation-grown Eucalyptus nitens | Manuel F. Rocha Sepúlveda">
+  <meta property="og:title" content="Genetic and environmental controls of traits affecting profitability of pulp &amp; solid-wood production from plantation-grown Eucalyptus nitens | Manuel Rocha">
   <meta property="og:description" content="Eucalyptus nitens is the main plantation eucalypt in Tasmania with around 208,000 hectares, where it is grown for pulp, timber and other engineered wood products. In Tasmania, over the period 2015-19, it has been estimated that around 4% of hardwood log volume will come from plantations managed under solid-wood silvicultural regimes (i.e. thinned and pruned) and this is predicted to increase due to the need to replace the diminishing supply of logs from native forest resources."><meta property="og:image" content="/img/headers/EnitensPlantation.jpg">
   <meta property="og:locale" content="en-us">
   
@@ -89,7 +89,7 @@
 
   
 
-  <title>Genetic and environmental controls of traits affecting profitability of pulp &amp; solid-wood production from plantation-grown Eucalyptus nitens | Manuel F. Rocha Sepúlveda</title>
+  <title>Genetic and environmental controls of traits affecting profitability of pulp &amp; solid-wood production from plantation-grown Eucalyptus nitens | Manuel Rocha</title>
 
 </head>
 <body id="top" data-spy="scroll" data-target="#toc" data-offset="71" >
@@ -108,7 +108,7 @@
         <span class="icon-bar"></span>
       </button>
       
-      <a class="navbar-brand" href="/">Manuel F. Rocha Sepúlveda</a>
+      <a class="navbar-brand" href="/">Manuel Rocha</a>
     </div>
 
     
