--- a/public/publication_types/index.html
+++ b/public/publication_types/index.html
@@ -59,8 +59,8 @@
   
 
   
-  <link rel="alternate" href="/index.xml" type="application/rss+xml" title="Manuel F. Rocha Sepúlveda">
-  <link rel="feed" href="/index.xml" type="application/rss+xml" title="Manuel F. Rocha Sepúlveda">
+  <link rel="alternate" href="/index.xml" type="application/rss+xml" title="Manuel Rocha">
+  <link rel="feed" href="/index.xml" type="application/rss+xml" title="Manuel Rocha">
   
 
   <link rel="manifest" href="/site.webmanifest">
@@ -74,9 +74,9 @@
   <meta property="twitter:site" content="@manufore">
   <meta property="twitter:creator" content="@manufore">
   
-  <meta property="og:site_name" content="Manuel F. Rocha Sepúlveda">
+  <meta property="og:site_name" content="Manuel Rocha">
   <meta property="og:url" content="/publication_types/">
-  <meta property="og:title" content="Publication_types | Manuel F. Rocha Sepúlveda">
+  <meta property="og:title" content="Publication_types | Manuel Rocha">
   <meta property="og:description" content="PhD (candidate) by research">
   <meta property="og:locale" content="en-us">
   
@@ -85,7 +85,7 @@
 
   
 
-  <title>Publication_types | Manuel F. Rocha Sepúlveda</title>
+  <title>Publication_types | Manuel Rocha</title>
 
 </head>
 <body id="top" data-spy="scroll" data-target="#toc" data-offset="71" >
@@ -104,7 +104,7 @@
         <span class="icon-bar"></span>
       </button>
       
-      <a class="navbar-brand" href="/">Manuel F. Rocha Sepúlveda</a>
+      <a class="navbar-brand" href="/">Manuel Rocha</a>
     </div>
 
     
