--- a/public/index.html
+++ b/public/index.html
@@ -57,8 +57,8 @@
   
 
   
-  <link rel="alternate" href="/index.xml" type="application/rss+xml" title="Manuel F. Rocha Sepúlveda">
-  <link rel="feed" href="/index.xml" type="application/rss+xml" title="Manuel F. Rocha Sepúlveda">
+  <link rel="alternate" href="/index.xml" type="application/rss+xml" title="Manuel Rocha">
+  <link rel="feed" href="/index.xml" type="application/rss+xml" title="Manuel Rocha">
   
 
   <link rel="manifest" href="/site.webmanifest">
@@ -72,9 +72,9 @@
   <meta property="twitter:site" content="@manufore">
   <meta property="twitter:creator" content="@manufore">
   
-  <meta property="og:site_name" content="Manuel F. Rocha Sepúlveda">
+  <meta property="og:site_name" content="Manuel Rocha">
   <meta property="og:url" content="/">
-  <meta property="og:title" content="Manuel F. Rocha Sepúlveda">
+  <meta property="og:title" content="Manuel Rocha">
   <meta property="og:description" content="PhD (candidate) by research">
   <meta property="og:locale" content="en-us">
   
@@ -83,7 +83,7 @@
 
   
 
-  <title>Manuel F. Rocha Sepúlveda</title>
+  <title>Manuel Rocha</title>
 
 </head>
 <body id="top" data-spy="scroll" data-target="#navbar-main" data-offset="71" >
@@ -102,7 +102,7 @@
         <span class="icon-bar"></span>
       </button>
       
-      <a class="navbar-brand" href="/">Manuel F. Rocha Sepúlveda</a>
+      <a class="navbar-brand" href="/">Manuel Rocha</a>
     </div>
 
     
