--- a/public/index.html
+++ b/public/index.html
@@ -417,7 +417,7 @@
           </a>
           
           <div class="card-text">
-            <h4><a href="/project/phdproject/" >Genetic and environmental controls of traits affecting profitability of pulp &amp; solid-wood production from plantation-grown Eucalyptus nitens</a></h4>
+            <h4><a href="/project/phdproject/" >Genetic and environmental control of traits affecting profitability of pulp &amp; solid-wood production from plantation-grown Eucalyptus nitens</a></h4>
             <div class="card-desription">
               <p>Genetic improvement of Eucalyptus nitens.</p>
             </div>
