--- a/public/project/phdproject/index.html
+++ b/public/project/phdproject/index.html
@@ -78,7 +78,7 @@
   
   <meta property="og:site_name" content="Manuel Rocha">
   <meta property="og:url" content="/project/phdproject/">
-  <meta property="og:title" content="Genetic and environmental controls of traits affecting profitability of pulp &amp; solid-wood production from plantation-grown Eucalyptus nitens | Manuel Rocha">
+  <meta property="og:title" content="Genetic and environmental control of traits affecting profitability of pulp &amp; solid-wood production from plantation-grown Eucalyptus nitens | Manuel Rocha">
   <meta property="og:description" content="Eucalyptus nitens is the main plantation eucalypt in Tasmania with around 208,000 hectares, where it is grown for pulp, timber and other engineered wood products. In Tasmania, over the period 2015-19, it has been estimated that around 4% of hardwood log volume will come from plantations managed under solid-wood silvicultural regimes (i.e. thinned and pruned) and this is predicted to increase due to the need to replace the diminishing supply of logs from native forest resources."><meta property="og:image" content="/img/headers/EnitensPlantation.jpg">
   <meta property="og:locale" content="en-us">
   
@@ -89,7 +89,7 @@
 
   
 
-  <title>Genetic and environmental controls of traits affecting profitability of pulp &amp; solid-wood production from plantation-grown Eucalyptus nitens | Manuel Rocha</title>
+  <title>Genetic and environmental control of traits affecting profitability of pulp &amp; solid-wood production from plantation-grown Eucalyptus nitens | Manuel Rocha</title>
 
 </head>
 <body id="top" data-spy="scroll" data-target="#toc" data-offset="71" >
@@ -255,7 +255,7 @@
   <div class="article-container">
 
     <div class="pub-title">
-      <h1 itemprop="name">Genetic and environmental controls of traits affecting profitability of pulp &amp; solid-wood production from plantation-grown Eucalyptus nitens</h1>
+      <h1 itemprop="name">Genetic and environmental control of traits affecting profitability of pulp &amp; solid-wood production from plantation-grown Eucalyptus nitens</h1>
       <span class="pub-authors" itemprop="author">&nbsp;</span>
       <span class="pull-right">
         
@@ -263,7 +263,7 @@
   <ul class="share">
     <li>
       <a class="twitter"
-         href="https://twitter.com/intent/tweet?text=Genetic%20and%20environmental%20controls%20of%20traits%20affecting%20profitability%20of%20pulp%20%26%20solid-wood%20production%20from%20plantation-grown%20Eucalyptus%20nitens&amp;url=%2fproject%2fphdproject%2f"
+         href="https://twitter.com/intent/tweet?text=Genetic%20and%20environmental%20control%20of%20traits%20affecting%20profitability%20of%20pulp%20%26%20solid-wood%20production%20from%20plantation-grown%20Eucalyptus%20nitens&amp;url=%2fproject%2fphdproject%2f"
          target="_blank" rel="noopener">
         <i class="fa fa-twitter"></i>
       </a>
@@ -277,21 +277,21 @@
     </li>
     <li>
       <a class="linkedin"
-         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=%2fproject%2fphdproject%2f&amp;title=Genetic%20and%20environmental%20controls%20of%20traits%20affecting%20profitability%20of%20pulp%20%26%20solid-wood%20production%20from%20plantation-grown%20Eucalyptus%20nitens"
+         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=%2fproject%2fphdproject%2f&amp;title=Genetic%20and%20environmental%20control%20of%20traits%20affecting%20profitability%20of%20pulp%20%26%20solid-wood%20production%20from%20plantation-grown%20Eucalyptus%20nitens"
          target="_blank" rel="noopener">
         <i class="fa fa-linkedin"></i>
       </a>
     </li>
     <li>
       <a class="weibo"
-         href="http://service.weibo.com/share/share.php?url=%2fproject%2fphdproject%2f&amp;title=Genetic%20and%20environmental%20controls%20of%20traits%20affecting%20profitability%20of%20pulp%20%26%20solid-wood%20production%20from%20plantation-grown%20Eucalyptus%20nitens"
+         href="http://service.weibo.com/share/share.php?url=%2fproject%2fphdproject%2f&amp;title=Genetic%20and%20environmental%20control%20of%20traits%20affecting%20profitability%20of%20pulp%20%26%20solid-wood%20production%20from%20plantation-grown%20Eucalyptus%20nitens"
          target="_blank" rel="noopener">
         <i class="fa fa-weibo"></i>
       </a>
     </li>
     <li>
       <a class="email"
-         href="mailto:?subject=Genetic%20and%20environmental%20controls%20of%20traits%20affecting%20profitability%20of%20pulp%20%26%20solid-wood%20production%20from%20plantation-grown%20Eucalyptus%20nitens&amp;body=%2fproject%2fphdproject%2f">
+         href="mailto:?subject=Genetic%20and%20environmental%20control%20of%20traits%20affecting%20profitability%20of%20pulp%20%26%20solid-wood%20production%20from%20plantation-grown%20Eucalyptus%20nitens&amp;body=%2fproject%2fphdproject%2f">
         <i class="fa fa-envelope"></i>
       </a>
     </li>
