--- a/public/404.html
+++ b/public/404.html
@@ -254,7 +254,7 @@
   <h2>Projects</h2>
   
   <ul>
-    <li><a href="/project/phdproject/">Genetic and environmental controls of traits affecting profitability of pulp &amp; solid-wood production from plantation-grown Eucalyptus nitens</a></li>
+    <li><a href="/project/phdproject/">Genetic and environmental control of traits affecting profitability of pulp &amp; solid-wood production from plantation-grown Eucalyptus nitens</a></li>
   </ul>
   
   
